# swagger/index.yaml
@@ -2,7 +2,7 @@ swagger: "2.0"
 info:
   title: dog-manager
   description: dog-manager test
-  version: 0.0.2
+  version: 0.0.1
 #host: localhost:3002
 schemes:
   - http
@@ -26,237 +26,6 @@ security:
   - bearer: []
 
 paths:
-  /dog/createDog/{dogKey}:
-    post:
-      summary: "반려견 울음 소리를 업로드합니다."
-      description: "S3에 울음 소리를 업로드합니다"
-      tags:
-        - dog
-      parameters:
-        - name: dogKey
-          in: path
-          type: string
-          required: true
-
-      responses:
-        200:
-          description: "업로드한 파일의 key를 내려줍니다"
-          schema:
-            properties:
-              dogKey:
-                type: string
-        400:
-          description: "Bad Request : 요청이 잘못되었습니다."
-        403:
-          description: "Forbidden : 권한이 없습니다."
-        404:
-          description: "Not Found : 파일이 없습니다."
-        500:
-          description: "Unexpected Exception : 알 수 없는 에러입니다."
-
-  /dog/setDogSoundType/{dogKey}/{soundKey}:
-    post:
-      summary: "반려견 울음 소리를 업로드합니다."
-      description: "S3에 울음 소리를 업로드합니다"
-      tags:
-        - dog
-      parameters:
-        - name: dogKey
-          in: path
-          type: string
-          required: true
-        - name: soundKey
-          in: path
-          type: string
-          required: true
-
-      responses:
-        200:
-          description: "업로드한 파일의 key를 내려줍니다"
-          schema:
-            properties:
-              dogKey:
-                type: string
-        400:
-          description: "Bad Request : 요청이 잘못되었습니다."
-        403:
-          description: "Forbidden : 권한이 없습니다."
-        404:
-          description: "Not Found : 파일이 없습니다."
-        500:
-          description: "Unexpected Exception : 알 수 없는 에러입니다."
-
-  /dog/getDogSoundType/{soundKey}:
-    get:
-      summary: "최근 반려견 울음 소리를 가져옵니다."
-      description: "dogKey: 울음 소리를 가져올 key입니다."
-      tags:
-        - dog
-      parameters:
-        - name: soundKey
-          in: path
-          type: string
-          required: true
-
-      responses:
-        200:
-          description: "반려견 소리의 list를 내려줍니다."
-          schema:
-            properties:
-              dogSounds:
-                type: array
-                items:
-                  type: string
-        400:
-          description: "Bad Request : 요청이 잘못되었습니다."
-        404:
-          description: "Not Found : 파일이 없습니다."
-        500:
-          description: "Unexpected Exception : 알 수 없는 에러입니다."
-
-  /dog/uploadDogSound/{dogKey}/{soundKey}:
-    post:
-      summary: "반려견 울음 소리를 업로드합니다."
-      description: "S3에 울음 소리를 업로드합니다"
-      tags:
-        - dog
-      parameters:
-        - name: dogKey
-          in: path
-          type: string
-          required: true
-        - name: soundKey
-          in: query
-          type: string
-          required: true
-
-      responses:
-        200:
-          description: "업로드한 파일의 key를 내려줍니다"
-          schema:
-            properties:
-              dogKey:
-                type: string
-        400:
-          description: "Bad Request : 요청이 잘못되었습니다."
-        403:
-          description: "Forbidden : 권한이 없습니다."
-        404:
-          description: "Not Found : 파일이 없습니다."
-        500:
-          description: "Unexpected Exception : 알 수 없는 에러입니다."
-
-  /dog/getDogSound/{soundKey}:
-    get:
-      summary: "최근 반려견 울음 소리를 가져옵니다."
-      description: "dogKey: 울음 소리를 가져올 key입니다."
-      tags:
-        - dog
-      parameters:
-        - name: dogKey
-          in: path
-          type: string
-          required: true
-
-    responses:
-      200:
-        description: "반려견 소리의 list를 내려줍니다."
-        schema:
-          properties:
-            dogSounds:
-              type: array
-              items:
-                type: string
-      400:
-        description: "Bad Request : 요청이 잘못되었습니다."
-      404:
-        description: "Not Found : 파일이 없습니다."
-      500:
-        description: "Unexpected Exception : 알 수 없는 에러입니다."
-
-  /dog/getAllDogSound/{dogKey}:
-    get:
-      summary: "최근 반려견 울음 소리를 모두 가져옵니다."
-      description: "dogKey: 울음 소리를 가져올 key입니다."
-      tags:
-        - dog
-      parameters:
-        - name: dogKey
-          in: path
-          type: string
-          required: true
-
-      responses:
-        200:
-          description: "반려견 소리의 list를 내려줍니다."
-          schema:
-            properties:
-              dogSounds:
-                type: array
-                items:
-                  type: string
-        400:
-          description: "Bad Request : 요청이 잘못되었습니다."
-        404:
-          description: "Not Found : 파일이 없습니다."
-        500:
-          description: "Unexpected Exception : 알 수 없는 에러입니다."
-
-  /dog/musicStart/{dogKey}:
-    post:
-      summary: "반려견의 울음 소리가 불안 상태면 음악을 시작합니다."
-      description: "userKey: 음악 상태를 컨트롤 할 key입니다.\nRaspberry Pi에 음악 시작 요청을 합니다."
-      tags:
-        - dog
-      parameters:
-        - name: dogKey
-          in: path
-          type: string
-          required: true
-
-
-      responses:
-        200:
-          description: "음악 재생 여부를 내려줍니다."
-          schema:
-            properties:
-              isStartMusic:
-                type: boolean
-        400:
-          description: "Bad Request : 요청이 잘못되었습니다."
-        403:
-          description: "Forbidden : 권한이 없습니다."
-        404:
-          description: "Not Found : 파일이 없습니다."
-        500:
-          description: "Unexpected Exception : 알 수 없는 에러입니다."
-
-  /dog/musicStateGet/{dogKey}:
-      get:
-        summary: "현재 음악 재생 상태를 가져옵니다."
-        description: "userKey: 음악 재생 상태를 가져올 key입니다."
-        tags:
-          - dog
-        parameters:
-          - name: dogKey
-            in: path
-            type: string
-            required: true
-
-        responses:
-          200:
-            description: "현재 음악 재생상태를 내려줍니다."
-            schema:
-              properties:
-                isStartMusic:
-                  type: boolean
-          400:
-            description: "Bad Request : 요청이 잘못되었습니다."
-          404:
-            description: "Not Found : 파일이 없습니다."
-          500:
-            description: "Unexpected Exception : 알 수 없는 에러입니다."
-
   /test:
     get:
       summary: "연결 상태 테스트"
@@ -269,10 +38,130 @@ paths:
           description: "연결 테스트 성공"
           schema:
             properties:
-              isStartMusic:
-                type: boolean
+              test:
+                type: string
         400:
           description: "Bad Request : 요청이 잘못되었습니다."
+        404:
+          description: "Not Found : 파일이 없습니다."
+        500:
+          description: "Unexpected Exception : 알 수 없는 에러입니다."
+
+  /dog/createDog/{dogKey}:
+    post:
+      summary: "반려견을 등록합니다."
+      description: "DB에 반려견을 등록합니다"
+      tags:
+        - dog
+      parameters:
+        - name: dogKey
+          in: path
+          type: string
+          required: true
+
+      responses:
+        200:
+          description: "등록한 반려견 정보를 내려줍니다"
+          schema:
+            properties:
+              dogKey:
+                type: string
+        400:
+          description: "Bad Request : 요청이 잘못되었습니다."
+        403:
+          description: "Forbidden : 권한이 없습니다."
+        404:
+          description: "Not Found : 파일이 없습니다."
+        500:
+          description: "Unexpected Exception : 알 수 없는 에러입니다."
+
+  /dog/getDog/{dogKey}:
+    get:
+      summary: "반려견 정보를 받아옵니다."
+      description: "DB에 저장된 반려견 정보를 받아옵니다"
+      tags:
+        - dog
+      parameters:
+        - name: dogKey
+          in: path
+          type: string
+          required: true
+
+      responses:
+        200:
+          description: "등록된 반려견 정보를 내려줍니다"
+          schema:
+            properties:
+              dogKey:
+                type: string
+        400:
+          description: "Bad Request : 요청이 잘못되었습니다."
+        403:
+          description: "Forbidden : 권한이 없습니다."
+        404:
+          description: "Not Found : 파일이 없습니다."
+        500:
+          description: "Unexpected Exception : 알 수 없는 에러입니다."
+
+  /dog/addDogCrying/{dogKey}:
+    post:
+      summary: "반려견 울음을 카운트합니다."
+      description: "DB에 울음 정보를 업로드합니다"
+      tags:
+        - dog
+      parameters:
+        - name: dogKey
+          in: path
+          type: string
+          required: true
+        - name: soundKey
+          in: query
+          type: string
+          required: true
+        - name: type
+          in: query
+          type: string
+          required: true
+
+      responses:
+        200:
+          description: "업로드한 울음 정보를 내려줍니다"
+          schema:
+            properties:
+              dogKey:
+                type: string
+        400:
+          description: "Bad Request : 요청이 잘못되었습니다."
+        403:
+          description: "Forbidden : 권한이 없습니다."
+        404:
+          description: "Not Found : 파일이 없습니다."
+        500:
+          description: "Unexpected Exception : 알 수 없는 에러입니다."
+
+  /dog/getAllDogCrying/{dogKey}:
+    get:
+      summary: "반려견의 울음 정보를 가져옵니다."
+      description: "DB에 저장된 울음 정보를 가져옵니다"
+      tags:
+        - dog
+      parameters:
+        - name: dogKey
+          in: path
+          type: string
+          required: true
+
+      responses:
+        200:
+          description: "저장된 울음 정보를 내려줍니다"
+          schema:
+            properties:
+              sound:
+                type: string
+        400:
+          description: "Bad Request : 요청이 잘못되었습니다."
+        403:
+          description: "Forbidden : 권한이 없습니다."
         404:
           description: "Not Found : 파일이 없습니다."
         500:
